cmake_minimum_required(VERSION 3.29)
project(Ej_3_Instrucciones_de_bucle)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ej_3_Instrucciones_de_bucle main.cpp
        for_loop.cpp
        while_loop.cpp
        do_while_loop.cpp
        jump_instructions.cpp
        for_loop.h
        while_loop.h
        do_while_loop.h
        jump_instructions.h
        do_while_loop.cpp
)
